# prom_text_format_parser

./: Cargo.toml  README.md
examples/: add_labels.rs
src/: lib.rs  parser.rs
test_data/: fail-no-sample-01.txt  node-exporter-01.txt  prometheus-01.txt
